
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int dot1 ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fprintf (int *,char*,char*,int,int ,int ) ;
 int msgm () ;
 int printf (char*) ;
 int tab1 ;
 int tab2 ;

int main(int argc,char *argv[])
{

 FILE *bluetab;

 if(argc < 2)
 {
   msgm();
   printf("Useage : ./bluetab <nickname>\n");
   return 0;
 }
 else
 {
   msgm();
   printf("bluetab.txt file created with your nickname . \n");
 }

 bluetab = fopen("bluetab.txt","w");
 if(!bluetab)
 {
   msgm();
   printf("Some kind of file error!\n");
   return 0;
 }


 fprintf(bluetab,"%s%c%c%c",argv[1],tab1,tab2,dot1);
 fclose(bluetab);
 return 0;

}
