; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_856.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/hardware/dos/extr_856.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [31 x i8] c"Useage : ./bluetab <nickname>\0A\00", align 1
@.str.1 = private unnamed_addr constant [48 x i8] c"bluetab.txt file created with your nickname . \0A\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"bluetab.txt\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.4 = private unnamed_addr constant [26 x i8] c"Some kind of file error!\0A\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"%s%c%c%c\00", align 1
@tab1 = common dso_local global i32 0, align 4
@tab2 = common dso_local global i32 0, align 4
@dot1 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp slt i32 %7, 2
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = call i32 (...) @msgm()
  %11 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %33

12:                                               ; preds = %2
  %13 = call i32 (...) @msgm()
  %14 = call i32 @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.1, i64 0, i64 0))
  br label %15

15:                                               ; preds = %12
  %16 = call i32* @fopen(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  store i32* %16, i32** %6, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %22, label %19

19:                                               ; preds = %15
  %20 = call i32 (...) @msgm()
  %21 = call i32 @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.4, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %33

22:                                               ; preds = %15
  %23 = load i32*, i32** %6, align 8
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 1
  %26 = load i8*, i8** %25, align 8
  %27 = load i32, i32* @tab1, align 4
  %28 = load i32, i32* @tab2, align 4
  %29 = load i32, i32* @dot1, align 4
  %30 = call i32 @fprintf(i32* %23, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8* %26, i32 %27, i32 %28, i32 %29)
  %31 = load i32*, i32** %6, align 8
  %32 = call i32 @fclose(i32* %31)
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %22, %19, %9
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32 @msgm(...) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fprintf(i32*, i8*, i8*, i32, i32, i32) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
